refactor: completely overhaul Item and Comment, Booking, User class and all related components